sonarqube/sonarqube-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-postgres
  namespace: jenkins
spec:
  selector:
    app: sonarqube-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
