sonarqube/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: jenkins
spec:
  selector:
    app: sonarqube
  ports:
    - name: web
      port: 9000
      targetPort: 9000
  type: ClusterIP
